add api create new dentist account
